--- a/layouts/mixins/post_script.pug
+++ b/layouts/mixins/post_script.pug
@@ -11,6 +11,7 @@ mixin prelude(post)
     link(rel="stylesheet",href=linkPrefix("files/post.css"))
 
 mixin meta(post)
+    link(rel="icon",href=file("files/icon.svg"))
     meta(charset="utf-8")
     meta(name="viewport",content="width:device-width,initial-scale=1.0")
     meta(name="author",content=user.name)
