--- a/layouts/includes/gnome_footer.pug
+++ b/layouts/includes/gnome_footer.pug
@@ -1,12 +1,12 @@
 footer
     section.list
         .alc.col
-            h3= i18n('Nexo')
+            h3= i18n('Fewu')
             ul
-                li= NEXO_VERSION
+                li= FEWU_VERSION
                 li
-                    a(href='//github.com/0xarch/nexo')='Get Nexo'
-            != nexo.logo()
+                    a(href='//github.com/0xarch/fewu')='Source Code'
+            != fewu.logo()
         .alc.col
             h3= i18n('Wacal Theme')
             ul 
