--- a/layouts/includes/gnome_header.pug
+++ b/layouts/includes/gnome_header.pug
@@ -4,7 +4,7 @@ header.top
             if user.logo
                 != user.logo
             else
-                != nexo.logo()
+                != fewu.logo()
         nav.index
             ul
                 each v in __prov_map||theme.headerObjects
