--- a/layouts/components/search.pug
+++ b/layouts/components/search.pug
@@ -1,3 +1,3 @@
 .Card.com.search
     header.ta-c.openPanel.onbrand= i18n('Search')
-    #searchUrl= nexo.searchStringUrl
+    #searchUrl= fewu.searchStringUrl
