--- a/layouts/archive.pug
+++ b/layouts/archive.pug
@@ -23,7 +23,7 @@ html
                     h2= k
                 ul.intros(style='grid-template-columns:repeat(auto-fill,minmax(480px,1fr))')
                     each item in v
-                        +post_li(ID[item])
+                        +post_li(IDMap.get(item))
                 +foot_navigator(cycling.total,cycling.now,'archive')
         +gnome_footer()
     style.
