--- a/layouts/about.pug
+++ b/layouts/about.pug
@@ -7,12 +7,12 @@ html(lang="zh")
         +prelude(post)
         +meta(post)
         title= __title__(post.title,'read')
-    body.colorful(OCP='OVERRIDE',style='--color1:'+Plugin.getColorByString(post.content)+';--color2:'+Plugin.getColorByString(post.getParsed('content')))
+    body.colorful(OCP='OVERRIDE',style='--color1:'+Plugin.getColorByString(post.content)+';--color2:'+Plugin.getColorByString(post.parsed.content))
         +gnome_header()
         .intro#intro.tac
             .h1= i18n('About')
         main.content#content
             section
                 .block
-                    #markdown_fillContent.container!= post.getParsed('content')
+                    #markdown_fillContent.container!= post.parsed.content
         +gnome_footer()
