--- a/layouts/post.pug
+++ b/layouts/post.pug
@@ -21,28 +21,8 @@ html(lang="zh")
                     if post.old == true
                         != post.parsed.foreword
                     != post.parsed.content
-            section.small.fit(class=post.license.is_cc_license()&&'cclogo')
-                if post.license.is_cc_license()
-                    a.Heading(href='https://creativecommons.org/')
-                        = i18n('Distribution License Agreement') + ' '
-                        i.fa-brands.fa-creative-commons(aria-hidden='true')
-                    .inner
-                        - let is = (v)=>post.license.includes(v)
-                        if is('BY')
-                            span BY
-                                i.fa-brands.fa-creative-commons-by
-                        if is('NC')
-                            span NC
-                                i.fa-brands.fa-creative-commons-nc
-                        if is('ND')
-                            span ND
-                                i.fa-brands.fa-creative-commons-nd
-                        if is('SA')
-                            span SA
-                                i.fa-brands.fa-creative-commons-sa
-                else
-                    .Heading= i18n('Distribution License Agreement')
-                    .container= i18n('@CC_PRIVATE')
+            section.small.fit(class=post.license.isCreativeCommons()&&'cclogo')
+                +license_notice(post)
             section
                 .pagination
                     - let earliest = post.nextID?false:true
